# whitespace

./: .gitignore  README.md  pyrightconfig.json  reset.sh  start.py  start.sh  stop.sh
backend/: .env.example  CLAUDE.md  alembic.ini  pyproject.toml  whitespace.db
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: arxiv.py  build.py  build_stream.py  export.py  ideas.py  projects.py  saved.py  system.py
backend/app/core/: config.py  lifespan.py
backend/app/db/: session.py
backend/app/db/migrations/: env.py
backend/app/db/models/: __init__.py  build_output.py  chunk.py  connected_idea.py  idea.py  ingestion_run.py  paper.py  project.py  (+2 more)
backend/app/embeddings/: model.py
backend/app/ingestion/: arxiv.py  pdf.py  text_cleaner.py
backend/app/output/: json_exporter.py  markdown_exporter.py  pdf_exporter.py
backend/app/pipeline/: analysis.py  chunking.py  gap_map.py  json_parsing.py  scoring.py
backend/app/runners/: anthropic.py  base.py  claude_cli.py  codex_cli.py  gemini.py  gemini_cli.py  openrouter.py  selector.py
backend/app/schemas/: build.py  ideas.py  project.py  saved.py  system.py
backend/app/vector/: client.py
backend/tests/: conftest.py  test_config.py  test_worker_db.py
backend/tests/api/: test_build_trigger.py  test_ideas.py  test_saved.py  test_system.py
backend/tests/worker/: test_build_generator.py  test_fetch.py  test_orchestrator.py
backend/worker/: build_generator.py  db.py  main.py  orchestrator.py  progress.py  start.sh
backend/worker/prompts/: analysis.md  critique.md  gap_map.md  prd.md  product_sketch.md  score.md  synthesis.md  technical_plan.md
backend/worker/stages/: analyse.py  connect.py  critique.py  fetch.py  fetch_acl_anthology.py  fetch_blogs.py  fetch_cisa_kev.py  fetch_github.py  fetch_open_alex.py  fetch_semantic_scholar.py  fetch_ssrn.py  gap_map.py  score.py  select.py  synthesise.py
(+71 files in other folders)
